# Tongues

./: .dippy  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
taytsh/: README.md  pyproject.toml
taytsh/spec/: backend-spec-v2.md  callgraph-spec-v2.md  hoisting-spec-v2.md  middleend-spec-v2.md  returns-spec-v2.md  scope-spec-v2.md  scope-spec.md  strings-spec-v2.md  taytsh-spec.md
taytsh/src/: __init__.py  ast.py  check.py  emit.py  parse.py  runtime.py  tokens.py
taytsh/tests/: conftest.py  test_runner.py
taytsh/tests/apps/: collections.ty  control_flow.ty  functions.ty  match.ty  strict_math.ty  strict_tostring.ty
taytsh/tests/checker/: basics.tests  control_flow.tests  match.tests  obj_rejection.tests  optionals.tests  structs.tests  unions.tests
taytsh/tests/examples/: test_csv_table.ty
taytsh/tests/parser/: edge_cases.tests  errors.tests  expressions.tests  fn_literals.tests  match.tests  pragmas.tests  spec_examples.tests  try_catch.tests  types.tests
tongues/: justfile  pyproject.toml  softfloat.py  spec.md
tongues/src/: ir.py  serialize.py  taytsh  tongues.py  tonguesw.py
tongues/src/backend/: __init__.py  c.py  csharp.py  dart.py  go.py  java.py  javascript.py  jslike.py  lua.py  perl.md  perl.py  php.md  php.py  precedence.md  python.py  ruby.md  ruby.py  rust.py  softfloat.py  swift.py  typescript.py  util.py  zig.py
tongues/src/backend_v2/: perl.py  python.py  ruby.py
tongues/src/frontend/: __init__.py  ast_compat.py  builders.py  collection.py  context.py  fields.py  frontend.py  hierarchy.py  inference.py  lowering.py  names.py  parse.py  signatures.py  subset.py  type_inference.py  validate.py
tongues/src/frontend_v2/: fields.py  inference.py
tongues/src/middleend/: __init__.py  callbacks.py  callgraph.py  exhaustiveness.md  hoisting.py  liveness.py  ownership.py  returns.py  scope.py  strings.py  type_flow.py
tongues/src/middleend_v2/: callgraph.py  hoisting.py  liveness.py  ownership.py  returns.py  (+2 more)
tongues/tests/: conftest.py  run_codegen_tests.py  run_codegen_testsw.py  run_tests.py  run_testsw.py  test_01_cli.py  test_02_parse.py  test_03_subset.py  test_04_names.py  test_05_signatures.py  test_06_fields.py  test_07_hierarchy.py  test_08_inference.py  test_09_inference.py  test_15_codegen.py  test_returns_v2.py  test_runner.py  test_runner_v2.py  test_scope_v2.py  test_softfloat.py
(+340 files in other folders)
