[project]
name = "tongues"
version = "0.1.0"
requires-python = "~=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "pytest-xdist>=3.5", "ruff"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = []

[project.scripts]
transpile = "src.cli:main"
