[project]
name = "tongues"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.ruff.lint]
ignore = ["E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"src/backend/*.py" = ["E402"]
"src/frontend/*.py" = ["E402", "E712", "F821"]
"tests/*.py" = ["E402"]
"tests/**/*.py" = ["E402", "E711", "E712", "F601", "F631"]
