[project]
name = "tongues"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = [
    # E402: Import not at top of file. Backends define helper functions before bulk imports.
    "E402",
    # E741: Ambiguous variable name (l/O/I). Intentional: `l, r = left, right` in backends.
    "E741",
    # F841: Unused variable. Pattern matching extracts unused bindings: `case Foo(x=x):`
    "F841",
]
